testdata/fixtures/audit/positive/exec_user_input_py_os_system.py
import os


def run_command(cmd):
    os.system(cmd)
