testdata/fixtures/audit/negative/exec_user_input_neg_os_system_constant_py.py
import os


def list_dir():
    os.system("ls -la")
